# libThinPlateShells

./: .gitignore  CMakeLists.txt  README.md  install.sh  runCmd.sh
Common/: CommonFunctions.cpp  CommonFunctions.h
ExternalEnergies/: PenaltyEnergy.h  PressureEnergy.cpp
Optimization/: LineSearch.cpp  NewtonDescent.cpp  NewtonDescent.h  ThinShellSolver.h  linearPlateBending.cpp  quasiStaticEnergyDescent.cpp  quasiStaticForceEqlbra.cpp
ThinShells/: ElasticEnergy.cpp  ElasticEnergy.h  ElasticIO.cpp  ElasticSetup.cpp  ElasticSetup.h  ElasticShellModel.cpp  ElasticShellModel.h  NeoHookeanMaterial.cpp  StVKMaterial.cpp  StVKTensionFieldMaterial.cpp  corotationalCurveFvmHingeBendingEnergy.cpp  corotationalCurveFvmHingeBendingEnergy.h  corotationalCurveHingeBendingEnergy.cpp  corotationalCurveHingeBendingEnergy.h  corotationalFlatFvmHingeBendingEnergy.cpp  corotationalFlatFvmHingeBendingEnergy.h  corotationalHingeBendingEnergy.cpp  corotationalHingeBendingEnergy.h  cubic_shell.cpp  cubic_shell.h  curveSmoothedHingeBendingEnergy.cpp  curveSmoothedHingeBendingEnergy.h  flatSmoothedHingeBendingEnergy.cpp  flatSmoothedHingeBendingEnergy.h  quadraticBendingEnergy.cpp  quadraticBendingEnergy.h
apps/: CMakeLists.txt
apps/ThinShellCli/: CMakeLists.txt  README.md  main.cpp
apps/ThinShellGui/: CMakeLists.txt  main.cpp
data/abaqus_non_linear/: Cantilever_51_S4R.inp  Hemisphere_16x16_S4R.inp
data/elastic/hemisphere/: hemisphere_edgedofs_simulated.txt  hemisphere_elastic.json  pointForce_hemisphere_full289.txt
data/elastic/slit_plate/: pointForce_slit_plate51.txt  (+1 more)
(+7 files in other folders)
